add fixes after review